 - SM83: Simplify register pair access on big endian
 - VFS: Fix directory node listing on some filesystems
Misc:
 - 3DS: Use "wide mode" where applicable for slightly better filtering
 - GB: Allow pausing event loop while CPU is blocked
 - GBA: Allow pausing event loop while CPU is blocked
 - Debugger: Keep track of global cycle count
 - FFmpeg: Add looping option for GIF/APNG
 - Qt: Renderer can be changed while a game is running
 - Qt: Add hex index to palette view
 - Qt: Add transformation matrix info to sprite view
 - Util: Reset vector size on deinit

0.8.3: (2020-08-03)
Emulation fixes:
 - ARM: Fix LDM^ writeback to user-mode register
 - ARM: Fix LDM^ {pc} differences (fixes mgba.io/i/1698)
 - ARM: Fix edge case with Thumb SBC flags (fixes mgba.io/i/1818)
 - GB MBC: Fix MBC1 RAM enable bit selection
 - GB MBC: Fix MBC2 bit selection
 - GB Memory: Fix OAM DMA from top 8 kB
 - GB Video: Always initialize palette
 - GBA Savedata: Fix potential corruption when loading a 1Mbit flash save
 - GBA Video: Fix invalid read in mode 4 mosaic
 - GBA Video: Fix color of disabled screen
 - SM83: Fix flags on little endian PowerPC
Other fixes:
 - 3DS: Fix garbage on borders of scaled screens
 - All: Correct format strings for some numbers on Windows (fixes mgba.io/i/1794)
 - All: Correct more format strings on Windows (fixes mgba.io/i/1817)
 - ARM: Fix decoder detection of branches with ALU and LDR instrctions
 - CMake: Fix build with libzip 1.7
 - CMake: Add missing dllexports.h file to dev installation
 - GB Core: Fix extracting SRAM when none is present
 - GBA: Fix leak if attempting to load BIOS multiple times
 - GBA Memory: Fix instability on Wii when using AGBPrint
 - GBA Savedata: Fix extracting save when not yet configured in-game
 - Qt: Fix file handle leak on opening an invalid ROM
 - Qt: Fix Italian RTC translation (fixes mgba.io/i/1798)
 - Qt: Add missing option for Wisdom Tree in overrides list