@@ -42,13 +42,15 @@ enum GUICursorState {
 
 enum {
 	BATTERY_EMPTY = 0,
-	BATTERY_LOW = 1,
-	BATTERY_HALF = 2,
-	BATTERY_HIGH = 3,
-	BATTERY_FULL = 4,
+	BATTERY_LOW = 25,
+	BATTERY_HALF = 50,
+	BATTERY_HIGH = 75,
+	BATTERY_FULL = 100,
+	BATTERY_VALUE = 0x7F,
+	BATTERY_PERCENTAGE_VALID = 0x80,
 
-	BATTERY_CHARGING = 8,
-	BATTERY_NOT_PRESENT = 16
+	BATTERY_CHARGING = 0x100,
+	BATTERY_NOT_PRESENT = 0x200,
 };
 
 struct GUIBackground {
